# mayakashi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  go.mod  go.sum  test_docker.sh
.github/workflows/: build.yml  test.yml
marmounter/: archive_read_options.go  file_pool.go  main.go
proto/: mayakashi.proto
src/: main.rs  proto.rs
src/cmd/: create.rs  mod.rs  showsum.rs  split.rs
src/format/: index_file.rs  mod.rs
tests/: e2e.py
