[package]
name = "mayakashi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
clap = { version = "4.4.11", features = ["derive"] }
crc32fast = "1.3.2"
flate2 = "1.0.28"
lz4 = "1.24.0"
lz4_flex = "0.11.1"
once_cell = "1.19.0"
prost = "0.12.3"
prost-types = "0.12.3"
rayon = "1.10.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
xz2 = "0.1.7"
zstd = { git = "https://github.com/rinsuki/zstd-rs", rev = "5256f2d13ce16962dd1283397112f1a15740792c", features = ["zdict_builder"] }

[build-dependencies]
prost-build = "0.12.3"
